--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <section class="home" id="home" style="padding: 0;">
 
-        <video class="video-wrapper" src="/Video/Landing.mp4" autoplay muted loop></video>
+        <video class="video-wrapper" src="/Landing.mp4" autoplay muted loop></video>
 
         <div class="video-fade"></div>
         </div>
