--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <!-- Font sathi -->
-
-    <!-- I-con Sathi -->
-
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="style.css">
@@ -19,7 +15,7 @@
 <body>
     <section class="home" id="home" style="padding: 0;">
 
-        <video class="video-wrapper" src="/Landing.mp4" autoplay muted loop></video>
+        <video class="video-wrapper" src="Landing.mp4" autoplay muted loop></video>
 
         <div class="video-fade"></div>
         </div>
@@ -28,7 +24,7 @@
         <header class="header">
 
             <a href="#" class="logo">
-                <img src="/Images/crpede.PNG" alt="">
+                <img src="Images/crpede.PNG" alt="">
             </a>
             <nav class="navbar">
                 <a href="#home">home <span></span> </a>
@@ -58,7 +54,7 @@
 
                     <div class="cart-item">
 
-                        <img src="/Images/cart1.jpg" alt="">
+                        <img src="Images/cart1.jpg" alt="">
                         <div class="content">
                             <h3>Italian Roast</h3>
                             <div class="price"><span>&#8377;</span>319.00/- per Kg </div>
@@ -68,7 +64,7 @@
                     <br>
                     <div class="cart-item">
 
-                        <img src="/Images/cart2.jpg" alt="">
+                        <img src="Images/cart2.jpg" alt="">
                         <div class="content">
                             <h3>Robusta </h3>
                             <div class="price"><span>&#8377;</span>349.00 /- per Kg</div>
@@ -77,7 +73,7 @@
                     <br>
                     <div class="cart-item">
 
-                        <img src="/Images/cart3.jpg" alt="">
+                        <img src="Images/cart3.jpg" alt="">
                         <div class="content">
                             <h3>City Roast</h3>
                             <div class="price"><span>&#8377;</span> 369.00 /- per Kg</div>
